applications/integration/networking/ingress/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: storage-gateway
spec:
  selector:
    istio: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http-qdrant
      protocol: HTTP
    hosts:
    - "*"
