applications/integration/networking/ingress/virtualservice-1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: qdrant-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /qdrant
    route:
    - destination:
        host: qdrant-service.storage.svc.cluster.local
        port:
          number: 7201
