applications/integration/networking/ingress/virtualservice-2.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mongodb-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - storage-gateway
  http:
  - match:
    - uri:
        prefix: /mongo
    route:
    - destination:
        host: mongo-service.storage.svc.cluster.local
        port:
          number: 27017
